# component-manager

./: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md
cmake/: ComponentManagerConfig.cmake
cmake/modules/: CompilerFlags.cmake
doc/: CMakeLists.txt  Doxyfile.in  doxy_main_page.md
examples/: CMakeLists.txt
examples/example2/: CMakeLists.txt
examples/example2/AdditionComponent/: Addition.cpp  AdditionExport.hpp
examples/example2/App/: main.cpp
examples/example2/CoreComponent/: CoreComponent.cpp  CoreExport.hpp  SimpleMainWindow.cpp  SimpleMainWindow.hpp
examples/example2/resource/: Addition.json  Core.json
include/ComponentManager/: Compiler.hpp  ComponentCreatorSet  ComponentRegistry  ComponentRegistry.hpp  Creator  Creator.hpp  Export  FunctionCall  FunctionCall.hpp  IComponentCreator  IComponentCreator.hpp  ModuleLoader  ModuleLoader.hpp  OperatingSystem.hpp
include/ComponentManager/Components/: ComponentCreatorSet  ComponentRegistry  Creator  Export  IComponentCreator  ModuleLoader
source/: CMakeLists.txt  ComponentCreatorSet.cpp  ComponentCreatorSet.hpp  ComponentRegistry.cpp  Creator.cpp  Creator.hpp  Export.hpp  FactoryComponentCreator.cpp  FactoryComponentCreator.hpp  FunctionCall.cpp  FunctionCall.hpp  FunctionMixture.hpp  FunctionSignature.cpp  FunctionSignature.hpp  FunctionUtilities.hpp  IComponentCreator.hpp  InvokeMethodVectorBinding.hpp  ModuleLoader.cpp  ModuleLoader.hpp  PrototypeComponentCreator.cpp  PrototypeComponentCreator.hpp  SingletonComponentCreator.cpp  SingletonComponentCreator.hpp
source/Components/: ComponentCreatorSet.cpp  ComponentCreatorSet.hpp  ComponentRegistry.hpp  FactoryComponentCreator.cpp  FactoryComponentCreator.hpp  FunctionMixture.hpp  FunctionSignature.cpp  SingletonComponentCreator.cpp  SingletonComponentCreator.hpp
tests/: .TestPrototypeCreator.cpp.swp  .TestPrototypeCreator.hpp.swp  CMakeLists.txt  SomePrototypeComponentWithParent.cpp  SomePrototypeComponentWithParent.hpp  SomePrototypeComponentWithoutParameters.cpp  SomePrototypeComponentWithoutParameters.hpp  TestComponentRegistry.cpp  TestFactoryCreator.cpp  TestFunctionCall.cpp  TestJsonParsing.cpp  TestPrototypeCreator.cpp  TestSingletonCreator.cpp
